src/objects/LmsRoomTypeDescSda__c.object
<CustomObject>
    <fields>
        <fullName>c_prop_cd__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>c_prop_cd_fk</description>
        <label>Property code</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Lms room type desc sda</relationshipLabel>
        <relationshipName>Lms_room_type_desc_sda_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c_rm_type__c</fullName>
        <description>c_rm_type</description>
        <label>c_rm_type</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_room_accessible__c</fullName>
        <description>c_room_accessible</description>
        <label>c_room_accessible</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_room_bed_type__c</fullName>
        <description>c_room_bed_type</description>
        <label>c_room_bed_type</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_room_desc1__c</fullName>
        <description>c_room_desc1</description>
        <label>c_room_desc1</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_room_desc2__c</fullName>
        <description>c_room_desc2</description>
        <label>c_room_desc2</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_room_desc3__c</fullName>
        <description>c_room_desc3</description>
        <label>c_room_desc3</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_room_quality__c</fullName>
        <description>c_room_quality</description>
        <label>c_room_quality</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_room_smoking__c</fullName>
        <description>c_room_smoking</description>
        <label>c_room_smoking</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_user_flag1__c</fullName>
        <description>c_user_flag1</description>
        <label>c_user_flag1</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_user_flag2__c</fullName>
        <description>c_user_flag2</description>
        <label>c_user_flag2</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_user_flag3__c</fullName>
        <description>c_user_flag3</description>
        <label>c_user_flag3</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>d_last_update_date__c</fullName>
        <description>d_last_update_date</description>
        <label>d_last_update_date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>f_user_amt1__c</fullName>
        <description>f_user_amt1</description>
        <label>f_user_amt1</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_user_amt2__c</fullName>
        <description>f_user_amt2</description>
        <label>f_user_amt2</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_user_amt3__c</fullName>
        <description>f_user_amt3</description>
        <label>f_user_amt3</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_rm_sort_1__c</fullName>
        <description>i_rm_sort_1</description>
        <label>i_rm_sort_1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_rm_sort_2__c</fullName>
        <description>i_rm_sort_2</description>
        <label>i_rm_sort_2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_rm_sort_3__c</fullName>
        <description>i_rm_sort_3</description>
        <label>i_rm_sort_3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_room_bet_type_sort__c</fullName>
        <description>i_room_bet_type_sort</description>
        <label>i_room_bet_type_sort</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_room_quality_sort__c</fullName>
        <description>i_room_quality_sort</description>
        <label>i_room_quality_sort</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_user_score1__c</fullName>
        <description>i_user_score1</description>
        <label>i_user_score1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_user_score2__c</fullName>
        <description>i_user_score2</description>
        <label>i_user_score2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_user_score3__c</fullName>
        <description>i_user_score3</description>
        <label>i_user_score3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>LmsRoomTypeDescSda</label>
    <nameField>
        <displayFormat>RTD-{0000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>LmsRoomTypeDescSda</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>